--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,5 @@ export(
 
     ## Utilities
     "geneGrep", "getCmap", "getCmapCEL", "normalizeCel", "combineResults",
-    "sampleList", "runLimma", "probeset2gene.Rd"
+    "sampleList", "runLimma", "probeset2gene"
 ) 
