--- a/_data/mydoc/mydoc_topnav.yml
+++ b/_data/mydoc/mydoc_topnav.yml
@@ -3,14 +3,14 @@
 topnav:
 - title: Topnav
   subcategories:
-    - title: Search
-      url: /mydoc/search.html
+    - title: Lonvevity Genomics
+      external_url: http://www.longevitygenomics.org/
       audience: writers, designers
       platform: all
       product: all
       version: all
       output: web
-
+    
     - title: Github Repo
       external_url: https://github.com/tgirke/longevityTools
       audience: writers, designers
@@ -30,14 +30,6 @@ topnav_dropdowns:
       version: all
       output: web
       items:
-        - title: Longevity Genomics
-          external_url: http://www.longevitygenomics.org/
-          audience: writers, designers
-          platform: all
-          product: all
-          version: all
-          output: web
-        
         - title: CRAN
           external_url: https://cran.r-project.org/
           audience: writers, designers
