--- a/_data/mydoc/mydoc_topnav.yml
+++ b/_data/mydoc/mydoc_topnav.yml
@@ -3,7 +3,7 @@
 topnav:
 - title: Topnav
   subcategories:
-    - title: Lonvevity Genomics
+    - title: Longevity Genomics
       external_url: http://www.longevitygenomics.org/
       audience: writers, designers
       platform: all
