--- a/_data/mydoc/mydoc_sidebar.yml
+++ b/_data/mydoc/mydoc_sidebar.yml
@@ -341,6 +341,62 @@ entries:
       version: all
       output: web
 
+  - title: longevityDrugs
+    audience: writers, designers
+    platform: all
+    product: all
+    version: all
+    output: web, pdf
+    items:
+
+    - title: 1. Introduction 
+      url: /mydoc/mydoc_longevityDrugs_1.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
+    - title: 2. Getting Started
+      url: /mydoc/mydoc_longevityDrugs_2.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
+    - title: 3. Load database
+      url: /mydoc/mydoc_longevityDrugs_3.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
+    - title: 4. Funding
+      url: /mydoc/mydoc_longevityDrugs_4.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
+    - title: 5. Version information
+      url: /mydoc/mydoc_longevityDrugs_5.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
+    - title: 6. References
+      url: /mydoc/mydoc_longevityDrugs_6.html
+      audience: writers, designers
+      platform: all
+      product: all
+      version: all
+      output: web
+
   - title: Funding
     audience: writers, designers
     platform: all
